# PongGame

./: .clang-format  .gitignore  CMakeLists.txt  Window.txt
include/: GameRunningState.hpp  ball.hpp  menu_online_state.hpp  player.hpp  pong.hpp  state_interface.hpp  state_manager.hpp  textbox.hpp
src/: CPU.cpp  CPU.hpp  GameRunningState.cpp  GameRunningState.hpp  ScoreBoard.cpp  ScoreBoard.hpp  StartMenuState.cpp  StartMenuState.hpp  ball.cpp  ball.hpp  example_state.cpp  example_state.hpp  main.cpp  player.cpp  player.hpp  pong.cpp  pong.hpp  state_interface.cpp  state_interface.hpp  state_manager.cpp  state_manager.hpp
src/AI_Side/: AI_V1.cpp
src/entities/: ball.cpp  cpu.cpp  cpu.hpp  player.cpp  player.hpp
src/helpers/: textbox.cpp
src/states/: GameRunningState.cpp  menu_online_state.cpp
